# AdventOfCode

./: README.md
2022/: .gitignore  Cargo.toml  README.md
2022/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day8.rs  day9.rs  main.rs
2023/: Cargo.toml  clippy.toml
2023/src/: helpers.rs  main.rs  solutions.rs
2023/src/solutions/: day1.rs  day11.rs  day12.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
2024/: Cargo.toml  build.rs
2024/.cargo/: config.toml
2024/src/: day.rs  days.rs  input.rs  lib.rs
2024/src/days/: day1.rs  day10.rs  day11.rs  day14.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
2025/: Cargo.toml  build.rs
2025/.cargo/: config.toml
2025/src/: day.rs  days.rs  input.rs
2025/src/days/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
