[package]
name = "aoc_2024"
version = "0.1.0"
edition = "2021"

[features]
nightly = []

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
dotenv = "0.15"
regex = "1.11.1"
reqwest = { version = "0.12", features = ["blocking"] }

[build-dependencies]
rustc_version = "0.4.1"
